v0.4.x  --  2015.03.20
* Added support to nested styles
* Added support to `.trim()` and `.throbber()` directly from `cli-color`, without require an internal module
* Styles are now unified to a single sentence
* Improved `.trim()` Regular Expression to remove all control sequence

v0.3.3  --  2015.03.20
* Fix throbber tests
* Fix spelling of LICENSE
* Improve documentation
* Configure lint scripts

v0.3.2  --  2014.04.27
* Fix errorneous dependency version in package.json

v0.3.1  --  2014.04.27
* Update package.json to use latest 'tad' engine (fixes tests evaluation)

v0.3.0  --  2014.04.27
* Move out all main modules from lib folder
* Improve `throbber` utility, so it no longer relies on `clock/lib/interval` interface
  and it's easier to use on its own
* Update internals to use latest versions of dependencies
* Remove Makefile (it's cross environement package)

v0.2.3  --  2013.09.16
Add `blink`

v0.2.2  --  2013.02.20
* Fix trim, so it tims all kind of ANSI sequence codes correctly
* Do not rely on getWindowSize (it may not be available at all)
* Fix some xterm colors references in documentation
* Add Missing MIT licence

v0.2.1  --  2012.10.05
Maintanance (Use v0.2 of memoizee)

v0.2.0  --  2012.09.19
Major refactor of internal algorithm, addition of new functionalities

Changes:
* Bright variants are now set as individual colors (not as additional
  characteristics as it was in 0.1.x). We should do: clc.redBright instead of
  clc.red.bright
* Removed 'gray' color, clc.blackBright has same effect and should be used
  instead

New functionalities:
* Already prepared configurations can now be extended directly, e.g.:
  var error = clc.red;
  var majorError = error.bold;
* 256 xTerm color support via xterm(n) and bgXterm(n) functions
* Move around functions: clc.move, clc.moveTo, clc.bol, clc.up, clc.down, clc.right and clc.left
* clc.reset - Outputs string that clears the terminal
* clc.beep
* clc.width & clc.height - Terminal characteristics properties
